--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
   },
   "devDependencies": {
     "babelify": "^6.1.2",
-    "browserify": "8.0.1",
-    "gulp": "^3.8.10",
-    "gulp-concat": "^2.4.3",
+    "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "gulp-uglify": "^1.2.0",
     "gulp-gh-pages": "^0.4.0",
     "gulp-rename": "^1.2.0",
     "gulp-stylus": "^2.0.0",
     "gulp-tap": "^0.1.3",
-    "gulp-uglify": "^1.1.0",
+    "browserify": "^10.2.3",
+    "es6-promise": "^2.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0"
   },
   "dependencies": {
+    "ampersand-state": "^4.5.6",
+    "es6-promises": "^1.0.10",
     "lodash": "^3.10.0"
   }
 }
