--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "vinyl-transform": "^1.0.0"
   },
   "dependencies": {
+    "ampersand-collection": "^1.4.5",
+    "ampersand-collection-view": "^1.4.0",
     "ampersand-state": "^4.5.6",
     "ampersand-view": "^8.0.0",
     "es6-promises": "^1.0.10",
