--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "vinyl-transform": "^1.0.0"
   },
   "dependencies": {
+    "ampersand-app": "^1.0.4",
     "ampersand-collection": "^1.4.5",
+    "ampersand-collection-lodash-mixin": "^2.0.1",
     "ampersand-collection-view": "^1.4.0",
+    "ampersand-router": "^3.0.2",
     "ampersand-state": "^4.5.6",
     "ampersand-view": "^8.0.0",
+    "ampersand-view-switcher": "^2.0.0",
     "es6-promises": "^1.0.10",
     "lodash": "^3.10.0"
   }
