--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ampersand-state": "^4.5.6",
     "ampersand-view": "^8.0.0",
     "ampersand-view-switcher": "^2.0.0",
+    "domready": "^1.0.8",
     "es6-promises": "^1.0.10",
     "lodash": "^3.10.0"
   }
