--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ampersand-view-switcher": "^2.0.0",
     "domready": "^1.0.8",
     "es6-promises": "^1.0.10",
-    "lodash": "^3.10.0"
+    "lodash": "^3.10.0",
+    "lodash.throttle": "^3.0.4"
   }
 }
